# vocode-api-python

./: .fernignore  README.md  pyproject.toml  reference.md
src/vocode/: __init__.py  client.py  environment.py  version.py
src/vocode/account_connections/: client.py
src/vocode/actions/: client.py
src/vocode/agents/: client.py
src/vocode/calls/: __init__.py  client.py
src/vocode/core/: client_wrapper.py
src/vocode/numbers/: __init__.py  client.py
src/vocode/prompts/: client.py
src/vocode/resources/: __init__.py
src/vocode/types/: __init__.py  account_connection_page.py  account_connection_page_items_item.py  account_connection_params_request.py  account_connection_response_model.py  account_connection_update_params_request.py  action_config.py  action_page.py  action_page_items_item.py  action_params_request.py  action_response_model.py  action_type.py  action_update_params_request.py  add_to_conference_action.py  add_to_conference_action_action_trigger.py  add_to_conference_action_params.py  add_to_conference_action_params_action_trigger.py  add_to_conference_action_update_params.py  add_to_conference_action_update_params_action_trigger.py  add_to_conference_action_update_params_action_trigger_zero.py  add_to_conference_action_update_params_config.py  add_to_conference_config.py  add_to_steering_pool_body.py  agent.py  agent_actions_item.py  agent_deepgram_keywords_value.py  agent_endpointing_sensitivity.py  agent_ivr_navigation_mode.py  (+260 more)
tests/: test_client.py
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
(+48 files in other folders)
