[tool.poetry]
name = "vocode-api"
version = "0.0.6-alpha.1"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "vocode", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "0.23.3"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
mypy = "0.971"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
